<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_customers">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_80sdp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/customerCardView"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:id="@+id/loginascustomer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/cardview_selector"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/final_customer" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:text="CUSTOMER"
                            android:textColor="@color/btn__color"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/driverCardView"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:id="@+id/loginasdriver"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/cardview_selector"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:src="@drawable/final_driver" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:text="DRIVER"
                            android:textColor="@color/btn__color"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <TextView
                android:id="@+id/idid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/amiko_semibold"
                android:text="Welcome Back"
                android:textColor="#000"
                android:textSize="40sp"
                android:transitionName="logo_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="Enter your phone number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


        <LinearLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="+92"
                    android:textColor="@color/black"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_phoneno"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone No"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/get_otp"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10ssp"
            android:backgroundTint="@color/btn__color"
            android:text="Get OTP"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/reg_go_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_60ssp"
            android:background="#00000000"
            android:minHeight="48dp"
            android:text="Don't have any account? Sign Up Here"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </LinearLayout>

</FrameLayout>