<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup_customer_Fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/signup_back"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:scaleType="fitCenter"
            android:layout_weight="0.1"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_55sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="0.9"
            android:gravity="center"
            android:text="Sign Up"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/customerCardView"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:id="@+id/loginascustomer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cardview_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/final_customer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:text="CUSTOMER"
                        android:textColor="@color/btn__color"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/driverCardView"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:id="@+id/loginasdriver"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cardview_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:src="@drawable/final_driver" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:text="DRIVER"
                        android:textColor="@color/btn__color"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

<!--        <ImageView-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:src="@drawable/truck"-->
<!--            android:transitionName="logo_image" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="-50dp"-->
<!--            android:fontFamily="@font/bungee"-->
<!--            android:text="Welcome,"-->
<!--            android:textColor="#000"-->
<!--            android:textSize="40sp"-->
<!--            android:transitionName="logo_text" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="SignUp to start your new Journey"-->
<!--            android:textSize="18sp"-->
<!--            android:transitionName="logo_desc" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="First Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                app:errorEnabled="true"
                android:transitionName="username_tran"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="+92"
                    android:textColor="@color/black"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_phoneNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                android:hint="Phone No">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phonereg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next"
            android:minHeight="48dp"
            android:backgroundTint="@color/btn__color"
            android:textColor="#fff"
            android:transitionName="button_tran" />

        <Button
            android:id="@+id/reg_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:minHeight="48dp"
            android:text="Already have an account? LogIn"
            android:textColor="@color/black" />
    </LinearLayout>

</FrameLayout>